# cmake_tutorials

./: .gitignore
getting_started/: CMakeLists.txt  GettingStarted.txt
libraries_and_subdirs/simple_stuffs_using_functions/: CMakeLists.txt  main.cpp
libraries_and_subdirs/using_functions_as_libraries/: CMakeLists.txt  main.cpp
